backend/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: tabimworld-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  tls:
    - hosts:
        - cms.tabimworld.com
      secretName: backend-tls
  rules:
    - host: cms.tabimworld.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-srv
                port:
                  number: 1337
